@@ -2363,6 +2363,9 @@ See the [[Special:Ipblocklist|IP block list]] for the list of currently operatio
 'ipb_expiry_invalid'          => 'Expiry time invalid.',
 'ipb_expiry_temp'             => 'Hidden username blocks should be permanent.',
 'ipb_already_blocked'         => '"$1" is already blocked',
+'ipb_modifying_block'         => 'Modifying existing block:',
+'ipb_tweak_block'             => 'Caution: This user ($1) is already blocked. 
+You can use this form to change the block settings.',
 'ipb_cant_unblock'            => 'Error: Block ID $1 not found. It may have been unblocked already.',
 'ipb_blocked_as_range'        => 'Error: The IP $1 is not blocked directly and cannot be unblocked.
 It is, however, blocked as part of the range $2, which can be unblocked.',
